--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
-
-# Optimization
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
-# Distributions
-dist/
+# Distribution / packaging
 build/
+dist/
 *.egg-info/
 
 # Virtual environments
 .venv/
 venv/
+env/
+
+# IDE
+.vscode/
+.idea/
